Fix spacing on homepage

--- a/app/assets/stylesheets/partials/_layout.scss
+++ b/app/assets/stylesheets/partials/_layout.scss
@@ -105,3 +105,7 @@ ul.options li {
     text-align: right;
   }
 }
+
+.hero {
+  padding-bottom: 150px;
+}
